--- a/SigmaValidation/SigmaValidation.nuspec
+++ b/SigmaValidation/SigmaValidation.nuspec
@@ -6,7 +6,7 @@
     <authors>Santosh Shrestha</authors>
     <owners>Santosh</owners>
     <licenseUrl type="expression">Apache-2.0</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
+    <projectUrl>https://github.com/santoshshrest/SigmaValidation/tree/master/SigmaValidation</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Package description</description>
