--- a/SigmaValidation/Core.Validation/Core.Validation.csproj
+++ b/SigmaValidation/Core.Validation/Core.Validation.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45;net46</TargetFrameworks>
     <Version>0.1.0</Version>
     <RepositoryUrl></RepositoryUrl>
   </PropertyGroup>
