--- a/SigmaValidation/SigmaValidation.nuspec
+++ b/SigmaValidation/SigmaValidation.nuspec
@@ -2,16 +2,17 @@
 <package >
   <metadata>
     <id>SigmaValidation</id>
-    <version>1.0.1.3</version>
+    <version>1.0.2</version>
+    <title>SigmaValidation</title>
     <authors>Santosh Shrestha</authors>
-    <owners>Santosh</owners>
-    <licenseUrl type="expression">Apache-2.0</licenseUrl>
+    <owners>Santosh Shrestha</owners>
+    <license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/santoshshrest/SigmaValidation/tree/master/SigmaValidation</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <iconUrl>https://github.com/santoshshrest/SigmaValidation/blob/master/Icon/SigmaValidation.ico</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Package description</description>
-    <releaseNotes>OperationResult added, email validation added</releaseNotes>
-    <copyright>Copyright ©2019</copyright>
+    <description>Data validation for phone number and email</description>
+    <releaseNotes>operationResult added, email validation added</releaseNotes>
+    <copyright>Copyright ©2019 AureoleSoft</copyright>
     <tags>SigmaValidation Validation Phone PhoneValidation Email EmailValidation</tags>
   </metadata>
 </package>
