--- a/SigmaValidation/Core.Validation/Core.Validation.csproj
+++ b/SigmaValidation/Core.Validation/Core.Validation.csproj
@@ -4,6 +4,9 @@
     <Version>0.1.0</Version>
     <RepositoryUrl></RepositoryUrl>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+    <DocumentationFile>C:\Users\Santosh\Documents\Projects\Santosh\Nuget\SigmaValidation\SigmaValidation\Core.Validation\Core.Validation.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="DataHelper\PhoneNumber\Africa\" />
     <Folder Include="DataHelper\PhoneNumber\SouthAmerica\" />
