--- a/SigmaValidation/Core.Validation/Core.Validation.csproj
+++ b/SigmaValidation/Core.Validation/Core.Validation.csproj
@@ -1,16 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net45;net46</TargetFrameworks>
-    <Version>0.1.0</Version>
-    <RepositoryUrl></RepositoryUrl>
+    <Version>1.0.5</Version>
+    <RepositoryUrl>https://github.com/santoshshrest/SigmaValidation/tree/master/SigmaValidation</RepositoryUrl>
+    <PackageId>SigmaValidation</PackageId>
+    <Authors>Santosh Shrestha</Authors>
+    <Company>AureoleSoft</Company>
+    <Product>SigmaValidation</Product>
+    <Description>This plugin provides programmatic access to several data valiadtion functions. It consists of three validating modules. Each modules consists of one or more actions that perform an operation against your data validation process. All of methods will return result object indicating success or failure, any exceptions thrown and the resulting data.</Description>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/santoshshrest/SigmaValidation/master/Icon/SigmaValidation.ico</PackageIconUrl>
+    <PackageTags>SigmaValidation Validation Phone PhoneValidation Email EmailValidation Scalar</PackageTags>
+    <AssemblyVersion>1.0.5.0</AssemblyVersion>
+    <FileVersion>1.0.5.0</FileVersion>
+    <Copyright>Copyright ©2019 AureoleSoft</Copyright>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
     <DocumentationFile>C:\Users\Santosh\Documents\Projects\Santosh\Nuget\SigmaValidation\SigmaValidation\Core.Validation\Core.Validation.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="DataHelper\PhoneNumber\Africa\" />
     <Folder Include="DataHelper\PhoneNumber\SouthAmerica\" />
-    <Folder Include="PhoneNumber\Africa\" />
     <Folder Include="PhoneNumber\SouthAmerica\" />
   </ItemGroup>
 </Project>
